tests/paczka1/small_fuzzy/22391380.err
Error in line 6: BLY2 S7=8 41,=
Error in line 3: LuYd5DB S738 6,7
